# kissat

./: .gitignore  CMakeLists.txt
src/: build.h  kissat.h
